--- a/webnine-dev_wcg/css/css.css
+++ b/webnine-dev_wcg/css/css.css
@@ -8223,8 +8223,8 @@ a:hover{
     /*float: left;*/
     margin: 0 2px 0 0;
     font-size: 11px;
-    height:29px;
-    line-height: 70px;
+    /*height:29px;*/
+    /*line-height: 70px;*/
     width:80px;
     text-align: center;
     cursor: pointer;
